clusters/main/kubernetes/apps/code-server/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: code-server
  annotations:
    gethomepage.dev/description: Run VS Code on any machine anywhere and access it in the browser.
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Tools
    gethomepage.dev/href: https://code-server.${DOMAIN_0}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/code-server.webp
    gethomepage.dev/instance: internal
    gethomepage.dev/name: CodeServer
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "code-server.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: code-server
          port: 10256

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: code-server
  namespace: code-server
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: code-server
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "Cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "x-forwarded-proto"
    failOpen: false
    http:
      backendRefs:
        - name: "authelia"
          namespace: "authelia"
          port: 9091
      path: "/api/authz/ext-authz/"
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
        - Location
